fix join and update alignement in the user view

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -26,9 +26,10 @@ img {
   border-color: solid red;
 }
 
-.date {
-  font-size: 13px;
-}
+table, th, td {
+  margin: auto;
+  font-size: 12px;
+  }
 
 .nav_bar {
   margin-left: 80%;
